fix: change text on submit button

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <form class="form" onSubmit="return createPassword(event)">
                 <input type="password" id="input" name="Password" autocomplete="off" 
                 readonly onfocus="this.removeAttribute('readonly');" >
-                <button type="submit" class="submitbutton">Enviar</button>
+                <button type="submit" class="submitbutton">Submit</button>
             </form>
             <div class="list" >
                 <ul id="list">
