fix: cellphone now works

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
         <div class="container">
             <h1>Password Creation</h1>
             <form class="form" onSubmit="return createPassword(event)">
-                <input type="password" id="input" name="Password" autocomplete="off" 
-                readonly onfocus="this.removeAttribute('readonly');" >
+                <input type="password" id="input" name="Password" autocomplete="off">
                 <button type="submit" class="submitbutton">Submit</button>
             </form>
             <div class="list" >
